# dwk-2021

./: README.md  exercise-5.03.txt  exercise-5.04.md  exercise-5.06.md  k3d-default.yaml
.github/workflows/: project.yaml  teardown-branch-environment.yaml
dailytodo/: generate.py
dwk-server/: Cargo.toml  Dockerfile
dwk-server/manifests/: deployment.yaml  ingress.yaml  service.yaml
dwk-server/src/: app.rs  main.rs
exercises/: kustomization.yaml
exercises/dailytodo/: Dockerfile
exercises/dailytodo/manifests/: cronjob.yaml
exercises/dummysite/: Makefile  PROJECT  go.mod  go.sum  main.go  test.yaml
exercises/dummysite/controllers/: dummysite_controller.go  suite_test.go
exercises/main-app/: Justfile  go.mod
exercises/manifests/: ingress.yaml  postgres.yaml
main-app/: Cargo.toml  Dockerfile  bake.sh  build.rs  consumer.dockerfile  consumer.js  go.sum  main.go  producer.dockerfile  producer.js
main-app/manifests/: deployment.yaml  ingress.yaml  service.yaml
main-app/pkg/protos/pingpong/: pingpong.pb.go
main-app/proto/: pingpong.proto
main-app/src/: app.rs  main.rs
manifests/: ingress.yaml  persistentvolume.yaml  postgres.yaml  priorityclass.yaml
pingpong/: Cargo.toml  Dockerfile  build.rs
pingpong/manifests/: config.yaml  deployment.yaml  persistentvolumeclaim.yaml  service.yaml
pingpong/migrations/: 20210528193832_initial.sql
pingpong/src/: app.rs  config.rs  grpc.rs  main.rs
project/: README.md  index.html  kustomization.yaml
project/api/: .dockerignore  Dockerfile  README.md  app.go  config.go  go.mod  go.sum  main.go  middlewares.go  pom.xml  skaffold.yaml  todos.go
project/broadcaster/: Dockerfile  go.mod  go.sum  main.go
project/dailytodo/: .dockerignore  generate.py
project/frontend/: .dockerignore  .gitignore  .prettierrc  Dockerfile  babel.config.js  index.css  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
project/manifests/: analysistemplate.yaml  automation.yaml  deployment.yaml  ingress.yaml  nats.yaml  postgres.yaml  routes.yaml  service.yaml  telegram-api-token.yaml  telegram-channel-id.yaml
protos/: pingpong.proto
(+59 files in other folders)
