[package]
name = "main-app"
version = "0.1.0"
authors = ["Sami Kukkonen <sami@samikukkonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"