[package]
name = "pingpong"
version = "0.1.0"
authors = ["Sami Kukkonen <sami@samikukkonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"