[package]
name = "pingpong"
version = "0.1.0"
authors = ["Sami Kukkonen <sami@samikukkonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.4"
prost = "0.7"
tokio-postgres = "0.7.2"
chrono = "0.4.19"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "migrate"] }
anyhow = "1"
tonic-health = "0.3.1"

[build-dependencies]
tonic-build = "0.4"